--- a/apps/server/.env
+++ b/apps/server/.env
@@ -1,3 +1,5 @@
 JWT_ACCESS_SECRET=jwt_access_secret
 JWT_REFRESH_SECRET=jwt_refresh_secret
-URL=localhost:3001
+URL=localhost:3000
+PORT=3000
+DEFAULT_ROLE_NAME=default
